--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-              
+            <a href=""><span>Web</span>Studio</a>
             <ul>
-                <li><a href=""><span>Web</span>Studio</a></li>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
@@ -112,7 +111,16 @@
                 </li>
             </ul>
         </section>
-
-    </main>   
+    </main> 
+    <!-- Футер -->
+    <footer>
+        <p><span>Web</span>Studio</p>
+        <address>
+        г. Киев, пр-т Леси Украинки, 26<br/>
+        <a href="">info@devstudio.com</a><br/>
+        <a href="">+38 096 111 11 11</a>
+        </address>
+        
+    </footer>
 </body>
 </html>
