добавляет размеры картинок

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         
             <ul>
                 <li>
-                    <img src="./images/img.jpg" alt="Вариант 1" width="370" />
+                    <img src="./images/img.jpg" alt="Вариант 1" width="370" height="294"/>
                 </li>
                 <li>
-                    <img src="./images/img(1).jpg" alt="Вариант 2" width="370" />
+                    <img src="./images/img(1).jpg" alt="Вариант 2" width="370" height="294"/>
                 </li>
                 <li>
-                    <img src="./images/img(2).jpg" alt="Вариант 3" width="370" />
+                    <img src="./images/img(2).jpg" alt="Вариант 3" width="370" height="294"/>
                 </li>
             </ul>
         </section>
@@ -90,22 +90,22 @@
                    
             <ul>
                 <li>
-                    <a href=""><img src="./images/img(3).jpg" alt="Игорь Демьяненко" width="270" /></a>
+                    <a href=""><img src="./images/img(3).jpg" alt="Игорь Демьяненко" width="270" height="260"/></a>
                     <p>Игорь Демьяненко</p>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <a href=""><img src="./images/img(4).jpg" alt="Ольга Репина" width="270" /></a>
+                    <a href=""><img src="./images/img(4).jpg" alt="Ольга Репина" width="270" height="260"/></a>
                     <p>Ольга Репина</p>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <a href=""><img src="./images/img(5).jpg" alt="Николай Тарасов" width="270" /></a>
+                    <a href=""><img src="./images/img(5).jpg" alt="Николай Тарасов" width="270" height="260"/></a>
                     <p>Николай Тарасов</p>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <a href=""><img src="./images/img(6).jpg" alt="Михаил Ермаков" width="270" /></a>
+                    <a href=""><img src="./images/img(6).jpg" alt="Михаил Ермаков" width="270" height="260"/></a>
                     <p>Михаил Ермаков</p>
                     <p>UI Designer</p>
                 </li>
@@ -114,7 +114,7 @@
     </main> 
     <!-- Футер -->
     <footer>
-        <p><span>Web</span>Studio</p>
+        <a href=""><span>Web</span>Studio</a>
         <address>
         г. Киев, пр-т Леси Украинки, 26<br/>
         <a href="">info@devstudio.com</a><br/>
