--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
                 <li>
                     <a href=""><img src="./images/img(3).jpg" alt="Игорь Демьяненко" width="270" height="260"/></a>
                     <p>Игорь Демьяненко</p>
-                    <p>Product Designer</p>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <a href=""><img src="./images/img(4).jpg" alt="Ольга Репина" width="270" height="260"/></a>
                     <p>Ольга Репина</p>
-                    <p>Frontend Developer</p>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <a href=""><img src="./images/img(5).jpg" alt="Николай Тарасов" width="270" height="260"/></a>
                     <p>Николай Тарасов</p>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <a href=""><img src="./images/img(6).jpg" alt="Михаил Ермаков" width="270" height="260"/></a>
                     <p>Михаил Ермаков</p>
-                    <p>UI Designer</p>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
