--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
             <ul>
                 <li>
                     <a href=""><img src="./images/img(3).jpg" alt="Игорь Демьяненко" width="270" height="260"/></a>
-                    <p>Игорь Демьяненко</p>
+                    <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <a href=""><img src="./images/img(4).jpg" alt="Ольга Репина" width="270" height="260"/></a>
-                    <p>Ольга Репина</p>
+                    <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <a href=""><img src="./images/img(5).jpg" alt="Николай Тарасов" width="270" height="260"/></a>
-                    <p>Николай Тарасов</p>
+                    <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <a href=""><img src="./images/img(6).jpg" alt="Михаил Ермаков" width="270" height="260"/></a>
-                    <p>Михаил Ермаков</p>
+                    <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
